nginx+mysql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /connect
            pathType: Prefix
            backend:
              service:
                name: nginx-connect
                port:
                  number: 80
          - path: /write
            pathType: Prefix
            backend:
              service:
                name: nginx-write
                port:
                  number: 80
          - path: /read
            pathType: Prefix
            backend:
              service:
                name: nginx-connect
                port:
                  number: 80
